# AI_Projects

Quantization_Evaluation/: Biteandbytes.ipynb  Quantization_Testing.ipynb  README.md  app.py  benchmark_llm.py  config.py  config.yaml  pipeline.py  quantization.py  reports.py  requirements.txt  tinyllama_baseline_bf16_20260715T121159Z.json  visualize_benchmarks.py
Zycus_Assignment/: .gitignore  DECISIONS.md  PLAN.md  README.md  Study.md  requirements.txt
Zycus_Assignment/config/: column_mapping.yaml  schedule.yaml
Zycus_Assignment/docs/: RAG_Methodology.md  schedule.md
Zycus_Assignment/src/: cleaning.py  ingestion.py  llm_reasoner.py  metrics.py  pipeline.py  ppt_generator.py  rag_engine.py  report_generator.py  run_weekly.py  sentiment.py
Zycus_Assignment/templates/: weekly_report.md.j2
Zycus_Assignment/tests/: conftest.py  test_cleaning.py  test_ingestion.py  test_metrics.py  test_rag_engine.py  test_sentiment.py
buymore_assignment/: .env.example  .gitignore  Biotique.md  Cerave.md  Human_algorithm.txt  Mamaearth.md  README.md  analysis.py  listing_audit.py  llm.py  logger.py  main.py  output.xlsx  outputs.py  pyproject.toml  schemas.py  scraping_module.py
kalpi_ai_assignment/: .gitignore  Human Algorith.txt  LOVABLE_PROMPT.md  kalpi_chat.html  kalpi_stategy_builder.ipynb  kalpi_strategy_builder.py  metric_extraction_script.py  metrics.txt  models.py  readme.md  requirements.txt  server.py  vercel.json
kalpi_ai_assignment/data/: universe_snapshot.json
kalpi_ai_assignment/screening/: compute.py  data_fetch.py  engine.py  metric_registry.py  schemas.py  (+1 more)
(+5 files in other folders)
