[project]
name = "buymore-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "groq>=0.37.1",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]
